fix faq-modal to be full-screen on mobile devices

--- a/caniprintit-resources/assets/public/css/index.less
+++ b/caniprintit-resources/assets/public/css/index.less
@@ -13,6 +13,9 @@
 .fa-circle-o-notch {
 	font-size: 40px;
 }
+html, body {
+	height: 100% !important;
+}
 body {
 	background-color: #f9f9f9 !important;
 	font-family: "Source Sans Pro", Helvetica, Verdana, sans-serif !important;
@@ -66,7 +69,7 @@ body {
 	margin: 0.15em;
 	font-size: 2.3em;
 }
-	
+
 .fa-twitter { padding: 0.05em 0.07em;}
 .fa-facebook {padding: 0.05em 0.3em; }
 hr {
@@ -208,13 +211,14 @@ h1 {
 #faq {
 	display: none;
 	position: absolute;
-	z-index: 100000;
+	z-index: 10000000;
 	left: 0;
-	right: 0;
 	top: 0;
 	width: 100% ;
 	height: 100%;
-	background-color: rgba(0, 0, 0, 0.9);
+	float: left;
+	overflow: scroll;
+	background-color: rgba(0, 0, 0, 0.88);
 	.faq-title {
 		margin-top: 5%;
 	}
@@ -230,8 +234,15 @@ h1 {
 			cursor: pointer;
 		}
 	}
-	p {
+	h2	{
 		font-size: 20px;
+		@media(min-width: 768px) {
+			font-size: 30px;
+		}
+	}
+	p {
+		font-size: 16px;
+		@media(min-width: 768px) {font-size: 20px;}
 	}
 	.container {
 		color: white;
